[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/characters/character1/Character1.tscn" type="PackedScene" id=1]
[ext_resource path="res://character_selector/CharacterSelector.gd" type="Script" id=2]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 5, 0.5, 5 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2.5, 0.25, 2.5 )

[node name="CharacterSelector" type="Spatial"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_right = 1004.0
margin_bottom = 580.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 27.0

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 382.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 386.0
margin_right = 617.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 231.0
margin_bottom = 27.0
text = "Select Your Character"

[node name="MarginContainer2" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 621.0
margin_right = 1004.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 1004.0
margin_bottom = 543.0
size_flags_vertical = 3

[node name="Previous" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 239.0
margin_right = 23.0
margin_bottom = 272.0
size_flags_vertical = 4
text = "<"

[node name="MarginContainer3" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 27.0
margin_right = 977.0
margin_bottom = 512.0
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 981.0
margin_top = 239.0
margin_right = 1004.0
margin_bottom = 272.0
size_flags_vertical = 4
text = ">"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 547.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 459.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="Select" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 463.0
margin_right = 541.0
margin_bottom = 33.0
text = "Select"

[node name="MarginContainer2" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 545.0
margin_right = 1004.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 2.33849, -7.53112 )
current = true

[node name="SelectedCharacterHolder" type="Spatial" parent="."]

[node name="Charactor1" parent="SelectedCharacterHolder" instance=ExtResource( 1 )]

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.215108, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.42862, 0.903485, 0, -0.903485, -0.42862, 0, 7.00084, -4.16509 )
light_energy = 2.0
spot_range = 8.5

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer2/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer2/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer3/Select" to="." method="_on_Select_pressed"]
